fixed duplication of properties, edited the class name of the element, removed unnecessary elements from html (tag <a> in particular)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#" class="mobile-menu-item">Our Apartment</a>
             <a href="#" class="mobile-menu-item">Rio</a>
             <a href="#" class="mobile-menu-item">Contact</a>
-            <a href="#"><button class="book-btn">Book</button></a>
+            <button class="book-btn">Book</button>
           </nav>
         </div>
       </div>
@@ -49,7 +49,7 @@
           <li><a href="#">Rio</a></li>
           <li><a href="#">Contact</a></li>
           <li class="book-li">
-            <a href="#"><button class="book-btn">Book</button></a>
+            <button class="book-btn">Book</button>
           </li>
         </ul>
       </nav>
@@ -89,7 +89,7 @@
       </section>
       <section class="our-apt display-flex">
         <div class="our-apt-item">
-          <div class="our-apt-head">
+          <div class="flex-column-center our-apt-head">
             <h2>Our Apartment</h2>
             <hr class="orange-line"></hr>
           </div>
@@ -144,7 +144,7 @@
       </section>
       <footer>
         <div class="contact-us">
-          <h3 class="footer-header">Contact Us</h3>
+          <h3 class="footer-headline">Contact Us</h3>
           <hr class="orange-line"></hr>
           <p>Ask us anything! We're here to answer any questions you have.</p>
           <span class="email-span">Email:</span>
@@ -154,7 +154,7 @@
           <span class="copyright">&copy; Be my guest in Rio</span>
         </div>
         <div class="follow-us">
-          <h3 class="footer-header">Follow Us</h3>
+          <h3 class="footer-headline">Follow Us</h3>
           <hr class="orange-line"></hr>
           <div class="social-icons display-flex">
             <a href="#"
@@ -175,12 +175,12 @@
           </div>
         </div>
         <div class="subscribe">
-          <h3 class="footer-header">Subscribe for Updates & Offers</h3>
+          <h3 class="footer-headline">Subscribe for Updates & Offers</h3>
           <hr class="orange-line"></hr>
           <div class="subscribe-form">
             <input
               class="subscribe-input"
-              type="text"
+              type="email"
               placeholder="Enter your email here*"
             />
             <button class="btn subscribe-btn">Subscribe Now</button>
